Fix size of the CTA button on dark mode and mobile devices

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -90,6 +90,13 @@
                 color: $lightcyan !important;
             }
         }
+
+        .start-btn-content {
+            .github--btn {
+                color: white !important;
+
+            }
+        }
     }
 
     .details__container {
